Hundles inital exceptions